--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,159 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: <span epub:type="subtitle">CHAPTERTITLE</span></a>
+					<a href="text/introduction.xhtml">Introduction</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml">The History of Rasselas, Prince of Abissinia</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Description of a Palace in a Valley</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: The Discontent of Rasselas in the Happy Valley</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Wants of Him That Wants Nothing</a>
+						</li>
+						<li>
+							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Prince Continues to Grieve and Muse</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Prince Meditates His Escape</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: A Dissertation on the Art of Flying</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: The Prince Finds a Man of Learning</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The History of Imlac</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The History of Imlac (Continued)</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Imlac’s History (Continued)⁠—A Dissertation Upon Poetry</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Imlac’s History (Continued)⁠—A Hint of Pilgrimage</a>
+						</li>
+						<li>
+							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Story of Imlac (Continued)</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Rasselas Discovers the Means of Escape</a>
+						</li>
+						<li>
+							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Rasselas and Imlac Receive an Unexpected Visit</a>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Prince and Princess Leave the Valley, and See Many Wonders</a>
+						</li>
+						<li>
+							<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: They Enter Cairo, and Find Every Man Happy</a>
+						</li>
+						<li>
+							<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The Prince Associates With Young Men of Spirit and Gaiety</a>
+						</li>
+						<li>
+							<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: The Prince Finds a Wise and Happy Man</a>
+						</li>
+						<li>
+							<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: A Glimpse of Pastoral Life</a>
+						</li>
+						<li>
+							<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: The Danger of Prosperity</a>
+						</li>
+						<li>
+							<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Happiness of Solitude⁠—The Hermit’s History</a>
+						</li>
+						<li>
+							<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: The Happiness of a Life Led According to Nature</a>
+						</li>
+						<li>
+							<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: The Prince and His Sister Divide Between Them the Work of Observation</a>
+						</li>
+						<li>
+							<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: The Prince Examines the Happiness of High Stations</a>
+						</li>
+						<li>
+							<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: The Princess Pursues Her Inquiry With More Diligence Than Success</a>
+						</li>
+						<li>
+							<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: The Princess Continues Her Remarks Upon Private Life</a>
+						</li>
+						<li>
+							<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Disquisition Upon Greatness</a>
+						</li>
+						<li>
+							<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Rasselas and Nekayah Continue Their Conversation</a>
+						</li>
+						<li>
+							<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Debate on Marriage (Continued)</a>
+						</li>
+						<li>
+							<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: Imlac Enters, and Changes the Conversation</a>
+						</li>
+						<li>
+							<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: They Visit the Pyramids</a>
+						</li>
+						<li>
+							<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: They Enter the Pyramid</a>
+						</li>
+						<li>
+							<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: The Princess Meets With an Unexpected Misfortune</a>
+						</li>
+						<li>
+							<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: They Return to Cairo Without Pekuah</a>
+						</li>
+						<li>
+							<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: The Princess Languishes for Want of Pekuah</a>
+						</li>
+						<li>
+							<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: Pekuah Is Still Remembered. The Progress of Sorrow</a>
+						</li>
+						<li>
+							<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: The Princess Hears News of Pekuah</a>
+						</li>
+						<li>
+							<a href="text/chapter-38.xhtml"><span epub:type="z3998:roman">XXXVIII</span>: The Adventures of the Lady Pekuah</a>
+						</li>
+						<li>
+							<a href="text/chapter-39.xhtml"><span epub:type="z3998:roman">XXXIX</span>: The Adventures of Pekuah (Continued)</a>
+						</li>
+						<li>
+							<a href="text/chapter-40.xhtml"><span epub:type="z3998:roman">XL</span>: The History of a Man of Learning</a>
+						</li>
+						<li>
+							<a href="text/chapter-41.xhtml"><span epub:type="z3998:roman">XLI</span>: The Astronomer Discovers the Cause of His Uneasiness</a>
+						</li>
+						<li>
+							<a href="text/chapter-42.xhtml"><span epub:type="z3998:roman">XLII</span>: The Opinion of the Astronomer Is Explained and Justified</a>
+						</li>
+						<li>
+							<a href="text/chapter-43.xhtml"><span epub:type="z3998:roman">XLIII</span>: The Astronomer Leaves Imlac His Directions</a>
+						</li>
+						<li>
+							<a href="text/chapter-44.xhtml"><span epub:type="z3998:roman">XLIV</span>: The Dangerous Prevalence of Imagination</a>
+						</li>
+						<li>
+							<a href="text/chapter-45.xhtml"><span epub:type="z3998:roman">XLV</span>: They Discourse With an Old Man</a>
+						</li>
+						<li>
+							<a href="text/chapter-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: The Princess and Pekuah Visit the Astronomer</a>
+						</li>
+						<li>
+							<a href="text/chapter-47.xhtml"><span epub:type="z3998:roman">XLVII</span>: The Prince Enters, and Brings a New Topic</a>
+						</li>
+						<li>
+							<a href="text/chapter-48.xhtml"><span epub:type="z3998:roman">XLVIII</span>: Imlac Discourses on the Nature of the Soul</a>
+						</li>
+						<li>
+							<a href="text/chapter-49.xhtml"><span epub:type="z3998:roman">XLIX</span>: The Conclusion, in Which Nothing Is Concluded</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +186,13 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORKTITLE</a>
+					<a href="text/introduction.xhtml" epub:type="frontmatter introduction">Introduction</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+				</li>
+				<li>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The History of Rasselas, Prince of Abissinia</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
