Rename ToC entries

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -44,16 +44,16 @@
 							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The History of Imlac</a>
 						</li>
 						<li>
-							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The History of Imlac (Continued)</a>
+							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The History of Imlac Continued</a>
 						</li>
 						<li>
-							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Imlac’s History (Continued)⁠—A Dissertation Upon Poetry</a>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Imlac’s History Continued⁠—A Dissertation Upon Poetry</a>
 						</li>
 						<li>
-							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Imlac’s History (Continued)⁠—A Hint of Pilgrimage</a>
+							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Imlac’s History Continued⁠—A Hint of Pilgrimage</a>
 						</li>
 						<li>
-							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Story of Imlac (Continued)</a>
+							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Story of Imlac Continued</a>
 						</li>
 						<li>
 							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Rasselas Discovers the Means of Escape</a>
@@ -104,7 +104,7 @@
 							<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Rasselas and Nekayah Continue Their Conversation</a>
 						</li>
 						<li>
-							<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Debate on Marriage (Continued)</a>
+							<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Debate on Marriage Continued</a>
 						</li>
 						<li>
 							<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: Imlac Enters, and Changes the Conversation</a>
@@ -134,7 +134,7 @@
 							<a href="text/chapter-38.xhtml"><span epub:type="z3998:roman">XXXVIII</span>: The Adventures of the Lady Pekuah</a>
 						</li>
 						<li>
-							<a href="text/chapter-39.xhtml"><span epub:type="z3998:roman">XXXIX</span>: The Adventures of Pekuah (Continued)</a>
+							<a href="text/chapter-39.xhtml"><span epub:type="z3998:roman">XXXIX</span>: The Adventures of Pekuah Continued</a>
 						</li>
 						<li>
 							<a href="text/chapter-40.xhtml"><span epub:type="z3998:roman">XL</span>: The History of a Man of Learning</a>
