--- a/src/epub/text/introduction.xhtml
+++ b/src/epub/text/introduction.xhtml
@@ -12,7 +12,7 @@
 			<p><i epub:type="se:name.publication.book">Rasselas</i> was written in the evenings of one week, and sent to press while being written.  Johnson earned by it a hundred pounds, with twenty-five pounds more for a second edition.  It was published in March or April; Johnson never read it after it had been published until more than twenty years afterwards.  Then, finding it in a chaise with Boswell, he took it up and read it eagerly.</p>
 			<p>This is one of Johnson’s letters to his mother, written after he knew that her last illness had come upon her.  It is dated about ten days before her death.  The “Miss” referred to in it was a faithful friend.  “Miss” was his home name for an affectionate stepdaughter, Lucy Porter:⁠—</p>
 			<blockquote epub:type="z3998:letter">
-				<p epub:type="z3998:salutation">“Honoured Madam—</p>
+				<p epub:type="z3998:salutation">“Honoured Madam⁠—</p>
 				<p>“The account which Miss gives me of your health pierces my heart.  God comfort and preserve you, and save you, for the sake of Jesus Christ.</p>
 				<p>“I would have Miss read to you from time to time the Passion of our Saviour; and sometimes the sentences in the Communion Service beginning⁠—‘Come unto me, all ye that travail and are heavy laden, and I will give you rest.’</p>
 				<p>“I have just now read a physical book which inclines me to think that a strong infusion of the bark would do you good.  Do, dear mother, try it.</p>
