--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			and is based on a transcription produced in 1996 by<br/>
 			<span class="name">David Price</span><br/>
 			for<br/>
-			<a href="http://www.gutenberg.org/ebooks/652">Project Gutenberg</a><br/>
+			<a href="https://www.gutenberg.org/ebooks/652">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
 			<a href="https://catalog.hathitrust.org/Record/007676236">Hathi Trust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
