--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
-			<p><i epub:type="se:name.publication.book">The History of Rasselas, Prince of Abissinia</i><br/>
+			<p><i epub:type="se:name.publication.book">The History of Rasselas, Prince of Abyssinia</i><br/>
 			was published in 1759 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Samuel_Johnson">Samuel Johnson</a>.</p>
 			<p>This ebook was produced for the<br/>
@@ -37,7 +37,7 @@
 			The version you’re reading now was released on<br/>
 			<span class="revision-date">January 1, 1900, 12:00 <abbr class="time eoc">a.m.</abbr></span><br/>
 			You can check for updates to this ebook or download it for different ereading systems at<br/>
-			<a href="https://standardebooks.org/ebooks/samuel-johnson/the-history-of-rasselas-prince-of-abissinia">this ebook’s Standard Ebooks page</a>.</p>
+			<a href="https://standardebooks.org/ebooks/samuel-johnson/the-history-of-rasselas-prince-of-abyssinia">this ebook’s Standard Ebooks page</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">https://standardebooks.org</a>.</p>
 		</section>
 	</body>
