--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The History of Rasselas, Prince of Abissinia, by Samuel Johnson" src="../images/titlepage.svg"/>
+			<img alt="The History of Rasselas, Prince of Abyssinia, by Samuel Johnson" src="../images/titlepage.svg"/>
 		</section>
 	</body>
 </html>
