--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/introduction.xhtml">Introduction</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">The History of Rasselas, Prince of Abissinia</a>
+					<a href="text/halftitle.xhtml">The History of Rasselas, Prince of Abyssinia</a>
 					<ol>
 						<li>
 							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Description of a Palace in a Valley</a>
@@ -192,7 +192,7 @@
 					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The History of Rasselas, Prince of Abissinia</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The History of Rasselas, Prince of Abyssinia</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
