--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -68,7 +68,7 @@
 							<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: They Enter Cairo, and Find Every Man Happy</a>
 						</li>
 						<li>
-							<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The Prince Associates With Young Men of Spirit and Gaiety</a>
+							<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The Prince Associates with Young Men of Spirit and Gaiety</a>
 						</li>
 						<li>
 							<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: The Prince Finds a Wise and Happy Man</a>
@@ -92,7 +92,7 @@
 							<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: The Prince Examines the Happiness of High Stations</a>
 						</li>
 						<li>
-							<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: The Princess Pursues Her Inquiry With More Diligence Than Success</a>
+							<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: The Princess Pursues Her Inquiry with More Diligence Than Success</a>
 						</li>
 						<li>
 							<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: The Princess Continues Her Remarks Upon Private Life</a>
@@ -116,7 +116,7 @@
 							<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: They Enter the Pyramid</a>
 						</li>
 						<li>
-							<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: The Princess Meets With an Unexpected Misfortune</a>
+							<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: The Princess Meets with an Unexpected Misfortune</a>
 						</li>
 						<li>
 							<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: They Return to Cairo Without Pekuah</a>
@@ -152,7 +152,7 @@
 							<a href="text/chapter-44.xhtml"><span epub:type="z3998:roman">XLIV</span>: The Dangerous Prevalence of Imagination</a>
 						</li>
 						<li>
-							<a href="text/chapter-45.xhtml"><span epub:type="z3998:roman">XLV</span>: They Discourse With an Old Man</a>
+							<a href="text/chapter-45.xhtml"><span epub:type="z3998:roman">XLV</span>: They Discourse with an Old Man</a>
 						</li>
 						<li>
 							<a href="text/chapter-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: The Princess and Pekuah Visit the Astronomer</a>
