--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/652">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://catalog.hathitrust.org/Record/007676236">Hathi Trust Digital Library</a>.</p>
+			<a href="https://catalog.hathitrust.org/Record/007676236">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Leaving the Mosque</i>,<br/>
 			a painting completed in 1900 by<br/>
@@ -32,9 +32,9 @@
 			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
-			<p>This is the <span class="revision-number">19th</span> edition of this ebook.<br/>
+			<p>This is the <span class="revision-number">20th</span> edition of this ebook.<br/>
 			This edition was released on<br/>
-			<span class="revision-date">October 19, 2017, 3:33 <abbr class="time eoc">a.m.</abbr></span><br/>
+			<span class="revision-date">December 8, 2017, 9:27 <abbr class="time eoc">p.m.</abbr></span><br/>
 			The first edition was released on<br/>
 			<span class="release-date">May 15, 2016, 5:08 <abbr class="time eoc">a.m.</abbr></span><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
