--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -47,10 +47,10 @@
 							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The History of Imlac Continued</a>
 						</li>
 						<li>
-							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Imlac’s History Continued⁠—A Dissertation Upon Poetry</a>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Imlac’s History Continued—A Dissertation Upon Poetry</a>
 						</li>
 						<li>
-							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Imlac’s History Continued⁠—A Hint of Pilgrimage</a>
+							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Imlac’s History Continued—A Hint of Pilgrimage</a>
 						</li>
 						<li>
 							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Story of Imlac Continued</a>
@@ -80,7 +80,7 @@
 							<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: The Danger of Prosperity</a>
 						</li>
 						<li>
-							<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Happiness of Solitude⁠—The Hermit’s History</a>
+							<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Happiness of Solitude—The Hermit’s History</a>
 						</li>
 						<li>
 							<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: The Happiness of a Life Led According to Nature</a>
