Replace .signature class with z3998:signature epub:type

--- a/src/epub/text/introduction.xhtml
+++ b/src/epub/text/introduction.xhtml
@@ -22,14 +22,14 @@
 				<footer>
 					<p>“I am,</p>
 					<p>“Your dutiful Son,</p>
-					<p class="signature">“<abbr class="name">Sam.</abbr> Johnson.</p>
+					<p epub:type="z3998:signature">“<abbr class="name">Sam.</abbr> Johnson.</p>
 					<p>“<abbr>Jan.</abbr> 13, 1759.”</p>
 				</footer>
 			</blockquote>
 			<p>That is the personal side of the tale of <i epub:type="se:name.publication.book">Rasselas</i>. In that way Johnson suddenly, on urgent pressure, carried out a design that had been in his mind. The success of Eastern tales, written as a form of moral essay, in the <i epub:type="se:name.publication.magazine">Rambler</i> and <i epub:type="se:name.publication.magazine">Adventurer</i>, upon suggestion, no doubt, of Addison’s <i epub:type="se:name.publication.book">Vision of Mirza</i>, had prompted him to express his view of life more fully than in essay form by way of Oriental apologue; and his early work on Father Lobo’s <i epub:type="se:name.publication.book">Voyage to Abyssinia</i>, caused him to choose Abyssinia for the land in which to lay his fable.</p>
 			<p>But Johnson’s <i epub:type="se:name.publication.book">Rasselas</i> has also a close relation to the time when it was written, as Johnson himself had to the time in which he lived. From the beginning of the century⁠—and especially, in England, since the beginning of the reign of George the Second⁠—there had been a growing sense of the ills of life, associated in some minds with doubt whether there could be a just God ruling this unhappy world. Hard problems of humanity pressed more and more on earnest minds. The feeling expressed in Johnson’s <i epub:type="se:name.publication.poem">Vanity of Human Wishes</i> had deepened everywhere by the year 1759. This has intense expression in <i epub:type="se:name.publication.book">Rasselas</i>, where all the joys of life, without active use of the energies of life, can give no joy; and where all uses of the energies of men are for the attainment of ideals worthless or delusive. This life was to Johnson, and to almost all the earnest thinkers of his time, unhappy in itself⁠—a schoolhouse where the rod was ever active. But in its unhappiness Johnson found no power that could overthrow his faith. To him this world was but a place of education for the happiness that would be to the faithful in the world to come. There was a great dread for him in the question, Who shall be found faithful? But there was no doubt in his mind that the happiness of man is to be found only beyond the grave. This was a feeling spread through Europe in the darkness gathering before the outburst of the storm of the great French Revolution. Even Gray, in his <i epub:type="se:name.publication.poem">Ode on a Distant Prospect of Eton College</i>, regarded Eton boys at their sports as “little victims,” unconscious of the doom of miseries awaiting them in life. Thus Johnson’s <i epub:type="se:name.publication.book">Rasselas</i> is a book doubly typical. We have in it the spirit of the writer when it best expressed the spirit of his time.</p>
 			<footer>
-				<p class="signature">Henry Morley</p>
+				<p epub:type="z3998:signature">Henry Morley</p>
 			</footer>
 		</section>
 	</body>
