--- a/src/epub/text/introduction.xhtml
+++ b/src/epub/text/introduction.xhtml
@@ -22,7 +22,7 @@
 				<footer>
 					<p>“I am,</p>
 					<p>“Your dutiful Son,</p>
-					<p epub:type="z3998:signature">“<abbr class="name">Sam.</abbr> Johnson.</p>
+					<p epub:type="z3998:signature">“<abbr epub:type="z3998:given-name">Sam.</abbr> Johnson.</p>
 					<p>“<abbr>Jan.</abbr> 13, 1759.”</p>
 				</footer>
 			</blockquote>
