--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://alexcabal.com">Alex Cabal</a>,<br/>
 			and is based on a transcription produced in 1996 by<br/>
-			<b class="name">David Price</b><br/>
+			<b epub:type="z3998:personal-name">David Price</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/652">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
