--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/652">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://catalog.hathitrust.org/Record/007676236">HathiTrust Digital Library</a>.</p>
+			<a href="https://standardebooks.org/ebooks/samuel-johnson/the-history-of-rasselas-prince-of-abyssinia#page-scans">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Leaving the Mosque</i>,<br/>
 			a painting completed in 1900 by<br/>
