Add 'role="presentation"' to headers and footers in blockquotes

--- a/src/epub/text/introduction.xhtml
+++ b/src/epub/text/introduction.xhtml
@@ -19,7 +19,7 @@
 				<p>“Pray, send me your blessing, and forgive all that I have done amiss to you. And whatever you would have done, and what debts you would have paid first, or anything else that you would direct, let Miss put it down; I shall endeavour to obey you.</p>
 				<p>“I have got twelve guineas to send you” [six were borrowed. There was a note in Johnson’s diary of six guineas repaid to Allen, the printer, who had lent them when he wanted to send money to his dying mother], “but unhappily am at a loss how to send it tonight. If I cannot send it tonight, it will come by the next post.</p>
 				<p>“Pray, do not omit anything mentioned in this letter. God bless you for ever and ever.</p>
-				<footer>
+				<footer role="presentation">
 					<p>“I am,</p>
 					<p>“Your dutiful Son,</p>
 					<p epub:type="z3998:signature">“<abbr epub:type="z3998:given-name">Sam.</abbr> Johnson.</p>
